<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="cheat_activity">CheatActivity</string>

    <!--Buttons-->
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>

    <!--Snackbars-->
    <string name="correct_snackbar">Correct!</string>
    <string name="incorrect_snackbar">Incorrect!</string>
    <string name="judgment_snackbar">Cheating is wrong.</string>

    <!--QuizActivity-->
    <string name="cheat_button">Cheat!</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    <!--CheatActivity-->
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="api_level">"API Level "</string>

</resources>
