<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        style="@style/WrapContent.QuizTextView"
        android:text="@string/warning_text"/>

    <TextView
        android:id="@+id/tv_answer"
        style="@style/WrapContent.QuizTextView"
        tools:text="Answer"/>

    <Button
        android:id="@+id/btn_showAnswer"
        style="@style/WrapContent"
        android:text="@string/show_answer_button"/>

    <TextView
        android:id="@+id/tv_apiLevel"
        style="@style/WrapContent"
        android:layout_marginTop="@dimen/apiLevel_marginTop"
        android:textStyle="bold"
        android:text="@string/api_level"/>

</LinearLayout>
