<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_question"
        style="@style/WrapContent.QuizTextView"
        tools:text="Sample Question"/>

    <LinearLayout
        style="@style/WrapContent"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_true"
            style="@style/WrapContent"
            android:text="@string/true_button"/>
        <Button
            android:id="@+id/btn_false"
            style="@style/WrapContent"
            android:text="@string/false_button"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/WrapContent"
        android:text="@string/next_button"
        android:drawableRight="@drawable/arrow_right"
        android:drawablePadding="@dimen/drawable_padding"/>

</LinearLayout>
